--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,9 @@
 	<description>CollectiveOne API Server</description>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>webapp</artifactId>
+	<groupId>org.collectiveone</groupId>
+  <packaging>pom</packaging>
+  <version>1.0-SNAPSHOT</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
