--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ collectiveone.webapp.from-mail-name=CollectiveOne
 collectiveone.webapp.from-mail=noreply@collectiveone.org
 collectiveone.webapp.baseurl=http://www.collectiveone.org
 collectiveone.webapp.admin-email=pepo.ospina@gmail.com
-collectiveone.webapp.send-email-enabled=true
+collectiveone.webapp.send-email-enabled=false
 
 collectiveone.webapp.new-subinitiative-template=aaa5565e-d53e-42e8-a11c-0e6ffb6757ee
 
