--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.show-sql=false
 spring.jpa.database=POSTGRESQL
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.url=${JDBC_IVORY_URL}
 
 auth0.issuer=${AUTH0_ISSUER}
 auth0.audience=${AUTH0_AUDIENCE}
